--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.1.4",
     "axios": "^1.2.3",
     "chart.js": "^4.1.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
