--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "antd": "^5.1.4",
     "antd-img-crop": "^4.5.2",
     "axios": "^1.2.3",
-    "chart.js": "^4.1.2",
+    "chart.js": "^4.2.0",
     "next": "^13.1.2",
     "node": "^19.4.0",
     "react": "^18.2.0",
@@ -47,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@faker-js/faker": "^7.6.0",
+    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "ts-loader": "^9.4.2",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.9.4"
   }
 }
