--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd-img-crop": "^4.5.2",
     "axios": "^1.2.3",
     "chart.js": "^4.2.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node": "^19.4.0",
     "react": "^18.2.0",
