--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@faker-js/faker": "^7.6.0",
+    "@types/multer": "^1.4.7",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "ts-loader": "^9.4.2",
     "tslint": "^6.1.3",
