--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-string-replace": "^1.1.0",
     "recharts": "^2.3.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
