--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "antd-img-crop": "^4.5.2",
     "axios": "^1.2.3",
     "chart.js": "^4.2.0",
+    "concurrently": "^7.6.0",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node": "^19.4.0",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
@@ -31,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server" : "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
