--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node": "^19.4.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
