--- a/package.json
+++ b/package.json
@@ -9,20 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.4",
     "antd-img-crop": "^4.5.2",
-    "axios": "^1.2.6",
+    "axios": "^1.3.0",
     "chart.js": "^4.2.0",
     "concurrently": "^7.6.0",
     "express": "^4.18.2",
-
     "fs": "^0.0.1-security",
-
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node": "^19.4.0",
-
     "nodemon": "^2.0.20",
     "query-string": "^8.1.0",
-
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
@@ -41,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server" : "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -70,5 +66,7 @@
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0",
     "typescript": "^4.9.4"
-  }
+  },
+  "proxy": "http://localhost:8081"
+
 }
