--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node": "^19.4.0",
+    "node-abort-controller": "^3.1.1",
     "nodemon": "^2.0.20",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -68,5 +69,4 @@
     "typescript": "^4.9.4"
   },
   "proxy": "http://localhost:8081"
-
 }
