--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.0",
     "chart.js": "^4.2.0",
     "concurrently": "^7.6.0",
+    "core-js-pure": "^3.27.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
